--- a/index.html
+++ b/index.html
@@ -1,23 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>Dajve Green</title>
-        <meta name='description' content="Web developer and system architect since the late 90s, with a focus on ecommerce and CRM. Currently heading up the technical team at allies.co.uk">
-		<style type='text/css'>
-            body { background: #39152E; color: #FFF; }
-            code { font-family: 'Ubuntu Mono', monospace; white-space: pre; }
-            .cli-user { font-weight: 700; color: #88DF34; } 
-            .cli-loc { font-weight: 700; color: #709DCB; }
-            a.noformat { text-decoration: none; color: inherit; }
-            .md-h1 { color: #F2D1D3; }
-            .md-ln-label { color: #57B3D9; text-decoration: underline; }
-            .md-ln-a { color: #9C6F8C; }
-            .md-li-mark,.md-lineno { color: #F4E64F; }
-		</style>
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700" rel="stylesheet">
-	</head>
-	<body>
-<code><span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ ls -l
+<!DOCTYPE html><html lang="en">	<head><title>Dajve Green</title><meta name='description' content="Web developer and system architect since the late 90s, with a focus on ecommerce and CRM. Currently heading up the technical team at allies.co.uk"><style type='text/css'>body {background:#39152E;color: #FFF;}code{font-family:'Ubuntu Mono',monospace;white-space: pre;}.cli-user{font-weight:700;color:#88DF34;}.cli-loc{font-weight:700;color:#709DCB;}a.noformat{text-decoration:none;color:inherit;}.md-h1{color:#F2D1D3;}.md-ln-label{color:#57B3D9;text-decoration:underline;}.md-ln-a{color:#9C6F8C;}.md-li-mark,.md-lineno{color:#F4E64F;}</style><link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700" rel="stylesheet"></head><body><code><span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ ls -l
 total 24
 -rw------- 1 dajve dajve     412 Sep  1 07:00 ABOUT.md
 -rw------- 1 dajve dajve      46 Sep  1 07:01 CONTACT.md
@@ -81,7 +62,4 @@ XXXXXXXXXXXXXXXXXXXXXXXXx,....        ..'''','',,;,,'..........         .'lkKKKK
 XXXXXXXXXXXXXXXXXXXXXXXx,...         .;:;,'...................             'dKKK
 XXXXXXXXXXXXXXXXXXXXXXk,......     .;ool::;'................                .l0K
 XXXXXXXXXXXXXXXXXXXXXO,.......     ,dxdlcc:;,''...........                  ..;x
-XXXXXXXXXXXXXXXXXXXXKc........    .lkxxollccc;,,'.........                  ...;
-        </code> 
-	</body>
-</html>
+XXXXXXXXXXXXXXXXXXXXKc........    .lkxxollccc;,,'.........                  ...;</code></body></html>
