--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html><html lang="en">	<head><title>Dajve Green</title><meta name='description' content="Web developer and system architect since the late 90s, with a focus on ecommerce and CRM. Currently heading up the technical team at allies.co.uk"><style type='text/css'>body {background:#39152E;color: #FFF;}code{font-family:'Ubuntu Mono',monospace;white-space: pre;}.cli-user{font-weight:700;color:#88DF34;}.cli-loc{font-weight:700;color:#709DCB;}a.noformat{text-decoration:none;color:inherit;}.md-h1{color:#F2D1D3;}.md-ln-label{color:#57B3D9;text-decoration:underline;}.md-ln-a{color:#9C6F8C;}.md-li-mark,.md-lineno{color:#F4E64F;}</style><link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700" rel="stylesheet"></head><body><code><span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ ls -l
-total 24
--rw------- 1 dajve dajve     412 Sep  1 07:00 ABOUT.md
--rw------- 1 dajve dajve      46 Sep  1 07:01 CONTACT.md
--rw-r----- 1 dajve www-data 6669 Sep  1 07:05 index.html
--rw------- 1 dajve dajve     125 Sep  1 07:02 LINKS.md
--rw------- 1 dajve dajve    3240 Sep  1 07:04 O-HAI.txt
+total 32 
+-rw-r----- 1 dajve www-data  412 Sep  1 07:00 ABOUT.md
+-rw-r----- 1 dajve www-data   46 Sep  1 07:01 CONTACT.md
+-rw-r----- 1 dajve www-data 1150 Sep  1 07:04 favicon.ico
+-rw-r----- 1 dajve www-data 7120 Sep 29 04:16 index.html
+-rw-r----- 1 dajve www-data  244 Sep 29 04:15 LINKS.md
+-rw-r----- 1 dajve www-data 3240 Sep  1 07:04 O-HAI.txt
 <span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ vi ABOUT.md 
 <span class='md-lineno'> 1</span> <span class='md-h1'># Dajve Green</span>
 <span class='md-lineno'> 2</span> 
@@ -16,12 +17,14 @@ total 24
 <span class='md-lineno'> 5</span> Currently heading up the technical side of <a href="https://allies.co.uk" class='noformat'>[<span class='md-ln-label'>Allies</span>](<span class='md-ln-a'>https://allies.co.uk</span>)</a> - a 
    commerce agency and startup incubator based in York, UK.
 <span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ vi CONTACT.md
-<span class='md-lineno'> 1</span> - Email: me@dajve.co.uk
-<span class='md-lineno'> 2</span> - Skype: allies.dajve
+<span class='md-lineno'> 1</span> <span class='md-li-mark'>-</span> Email: me@dajve.co.uk
+<span class='md-lineno'> 2</span> <span class='md-li-mark'>-</span> Skype: allies.dajve
 <span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ vi LINKS.md
 <span class='md-lineno'> 1</span> <span class='md-li-mark'>-</span> <a href="https://www.linkedin.com/in/dajve/" class='noformat'>[<span class='md-ln-label'>LinkedIn</span>](<span class='md-ln-a'>https://www.linkedin.com/in/dajve/</span>)</a>
 <span class='md-lineno'> 2</span> <span class='md-li-mark'>-</span> <a href="https://github.com/dajve" class='noformat'>[<span class='md-ln-label'>GitHub</span>](<span class='md-ln-a'>https://github.com/dajve</span>)</a>
-<span class='md-lineno'> 3</span> <span class='md-li-mark'>-</span> <a href="https://twitter.com/dajve" class='noformat'>[<span class='md-ln-label'>Twitter</span>](<span class='md-ln-a'>https://twitter.com/dajve</span>)</a>
+<span class='md-lineno'> 3</span> <span class='md-li-mark'>-</span> <a href="https://commercehero.io/dajve" class='noformat'>[<span class='md-ln-label'>Commerce Hero</span>](<span class='md-ln-a'>https://commercehero.io/dajve</span>)</a>
+<span class='md-lineno'> 4</span> <span class='md-li-mark'>-</span> <a href="https://twitter.com/dajve" class='noformat'>[<span class='md-ln-label'>Twitter</span>](<span class='md-ln-a'>https://twitter.com/dajve</span>)</a>
+<span class='md-lineno'> 5</span> <span class='md-li-mark'>-</span> <a href="https://u.magento.com/certification/directory/dev/46558/" class='noformat'>[<span class='md-ln-label'>Magento</span>](<span class='md-ln-a'>https://u.magento.com/certification/directory/dev/46558/</span>)</a>
 <span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ cat O-HAI.txt
 XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXK00K0OOkkO00KKXXXXXXXXXXXXXXXXXXX
 XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXK0kxxxxdodddxkkO0KXXXXXXXXXXXXXXXXX
