--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><html lang="en">	<head><title>Dajve Green</title><meta name='description' content="Web developer and system architect since the late 90s, with a focus on ecommerce and CRM. Currently heading up the technical team at allies.co.uk"><style type='text/css'>body {background:#39152E;color: #FFF;}code{font-family:'Ubuntu Mono',monospace;white-space: pre;}.cli-user{font-weight:700;color:#88DF34;}.cli-loc{font-weight:700;color:#709DCB;}a.noformat{text-decoration:none;color:inherit;}.md-h1{color:#F2D1D3;}.md-ln-label{color:#57B3D9;text-decoration:underline;}.md-ln-a{color:#9C6F8C;}.md-li-mark,.md-lineno{color:#F4E64F;}</style><link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700" rel="stylesheet"></head><body><code><span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ ls -l
 total 32 
--rw-r----- 1 dajve www-data  412 Sep  1 07:00 ABOUT.md
--rw-r----- 1 dajve www-data   46 Sep  1 07:01 CONTACT.md
+-rw-r----- 1 dajve www-data  286 May  3 08:53 ABOUT.md
+-rw-r----- 1 dajve www-data   24 May  3 08:53 CONTACT.md
 -rw-r----- 1 dajve www-data 1150 Sep  1 07:04 favicon.ico
--rw-r----- 1 dajve www-data 7120 Sep 29 04:16 index.html
+-rw-r----- 1 dajve www-data 6102 May  3 08:55 index.html
 -rw-r----- 1 dajve www-data  244 Sep 29 04:15 LINKS.md
--rw-r----- 1 dajve www-data 3240 Sep  1 07:04 O-HAI.txt
+-rw-r----- 1 dajve www-data 2510 May  3 08:54 O-HAI.txt
 <span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ vi ABOUT.md 
 <span class='md-lineno'> 1</span> <span class='md-h1'># Dajve Green</span>
 <span class='md-lineno'> 2</span> 
@@ -14,11 +14,9 @@ total 32
    since 2015.
 <span class='md-lineno'> 4</span> Experienced in a wide range of front and backend technologies, platforms, and 
    methodologies.
-<span class='md-lineno'> 5</span> Currently heading up the technical side of <a href="https://allies.co.uk" class='noformat'>[<span class='md-ln-label'>Allies</span>](<span class='md-ln-a'>https://allies.co.uk</span>)</a> - a 
-   commerce agency and startup incubator based in York, UK.
+<span class='md-lineno'> 5</span> Anatidaephile
 <span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ vi CONTACT.md
 <span class='md-lineno'> 1</span> <span class='md-li-mark'>-</span> Email: me@dajve.co.uk
-<span class='md-lineno'> 2</span> <span class='md-li-mark'>-</span> Skype: allies.dajve
 <span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ vi LINKS.md
 <span class='md-lineno'> 1</span> <span class='md-li-mark'>-</span> <a href="https://www.linkedin.com/in/dajve/" class='noformat'>[<span class='md-ln-label'>LinkedIn</span>](<span class='md-ln-a'>https://www.linkedin.com/in/dajve/</span>)</a>
 <span class='md-lineno'> 2</span> <span class='md-li-mark'>-</span> <a href="https://github.com/dajve" class='noformat'>[<span class='md-ln-label'>GitHub</span>](<span class='md-ln-a'>https://github.com/dajve</span>)</a>
@@ -26,43 +24,42 @@ total 32
 <span class='md-lineno'> 4</span> <span class='md-li-mark'>-</span> <a href="https://twitter.com/dajve" class='noformat'>[<span class='md-ln-label'>Twitter</span>](<span class='md-ln-a'>https://twitter.com/dajve</span>)</a>
 <span class='md-lineno'> 5</span> <span class='md-li-mark'>-</span> <a href="https://u.magento.com/certification/directory/dev/46558/" class='noformat'>[<span class='md-ln-label'>Magento</span>](<span class='md-ln-a'>https://u.magento.com/certification/directory/dev/46558/</span>)</a>
 <span class='cli-user'>me@dajve</span>:<span class='cli-loc'>~</span>$ cat O-HAI.txt
-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXK00K0OOkkO00KKXXXXXXXXXXXXXXXXXXX
-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXK0kxxxxdodddxkkO0KXXXXXXXXXXXXXXXXX
-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXNXXXXXNNNXXKOkxxddddddoooooooxkOKXXXXXXXXXXXXXXX
-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXNXXNXXXXXKKOkkOO00KKKK000Okxdlclodk0XXXXXXXXXXXX
-XXXXXXXXXXXXXXXXXXXXNNNNNNNNNNNNNNXXNXKK000KXNNNNNNNNNNXXXXXK0ko:,,lkKXXXXXXXXXX
-XXXXXXXXXXXXXXXXXXXNNNNNNNNNNNNXNNXK0kOKXXNNNNNNNNNNNNNNNNXXXXKKOd:,;lx0XXXXXXXX
-XXXXXXXXXXXXXXXXNNNNNNNNNNNNNNNNNX0xdOKXXNNNNNWNNWWWWWNNNNNNXXXKK0Ol,.,ckKXXXXXX
-XXXXXXXXXXXXXXNNNNNNNNNNNNNNNNNNXOdx0XXXNNNNNNNWWWWWWWNNNNNXXXXKKK00x:..:kXXXXXX
-XXXXXXXXXXXXNNNNNNNNNNNNNNNNNNNXkoxKXXXXXXNNNNNWWWNNNNNNNNXXXXKKK000Oko,'l0XXXXX
-XXXXXXXXXXXNNNNNNNNNNNNNNNNNNNN0dkKKXXXXXXNNNNNNNNNNNNNNNXXXXXKK000Okkkx:;d0XXXX
-XXXXXXXXNNNNNNNNNNNNNNNNNNNNNNXkkKXXXXXXXNNNNNNNNNNNNNNNNXXXXKK000OOkOOOxc;dKXXX
-XXXXXXNNNNNNNNNNNNNNNNNNNNNNNN0kOKXXXXXXXXXXXNNNNNNNNNNNXXXXXXKKK00OOOOOkl,;kXXX
-XXXXXXNNNNNNNNNNNNNNNNNNNNNNNNOx0KKXXXXXKXKKKXXXXXXXXXKKKKKKKKKKK00OOOkxdc..lKXX
-XXXXXNNNNNNNNNNNNNNNNNNNNNNNNXkxO000OkkkkkkkO00KKKK00OOkkOOO000000Okxxdoc,..lKXX
-XXXXNNNNNNNNNNNNNNNNNNNNNNNNNXOkxddolcc::;;:loxO000Oxoc:;;;:lodxkOOkddol;...dXXX
-XXXXNNNNNNNNNNNNNNNNNNNNNNNNNX0xoc:ccllc::;;::ok0K0xl;;;;;;::cccllloollc;. 'kXXX
-XXXXNNNNNNNNNNNNNNNNNNNNNNNNNX0xl::cc:,'.',;::oOXXKx:,;:;:cllc:;;;,;:ccc,. ;0XXX
-XXXNNNNNNNNNNNNNNNNNNNNNNNNNNX0Oxlccl:'..,clooxKNNKd::c;::,'',;,',,,,:lc,..cKXXX
-XXNNNNNNNNNNNNNNNNNNNNNNNNNNNX000kxddoooodxkO00XNNKkooolddc'.',,',;;:col;..dXXXX
-NNNNNNNNNNNNNNNNNNNNNNNNNNNNNK0KKK0OOkkkOO0KKKKXNNKOxkOkxxdolc:::ccooddo;.,o0XXX
-NNNNNNNNNNNNNNNNNNNNNNNNNNNNX0OKXXXKK000KKKKK0KXNNKkxO00OOkxxddxxkkkxxdo:,''lKXX
-NNNNNNNNNNNNNNNNNNNNNNNNNNNNX0kO00KKKKKKKKK000KXXX0kxkO0K00OO0000K0Okdol:,',dKXX
-NNNNNNNNNNNNNNNNNNNNNNNNNNNNXOxxkOO0KKKKKK0O0KKXNXKOkxk0KKKKKKK000Okxolc;,;lOXXX
-NNNNNNNNNNNNNNNNNNNNNNNNNNNNXOdxkO00KKK00000KKKXXX0OOkkOKKKKKK0Okxxdoc:;,:lkKXXX
-NNNNNNNNNNNNNNNNNNNNNNNNNNNNXkodxkO0000000OdldkkxdoclodO000000Okxdolc:;,,cd0XXXX
-XNNNNNNNNNNNNNNNNNNNNNNNNNNNXOooxkO000KKKKOo;,;,''...'lO000OOkxxdllc:;,,,:dKXXXX
-XXXXNNNNNNNNNNNNNNNNNNNNNNNNN0dldkOO000OOkxlc:;,''...,oOKK0Okkxdolcc;,,,;lOXXKXX
-XXXXNNNNNNNNNNNNNNNNNNNNNNNNNXklldkOOkxxdxxddolcc:;,,;lxOOOOkxdolc:;,,,:x0KXKKXK
-XXXXXNNNNNNNNNNNNNNNNNNNNNNNNN0ocoxxolc:::c:::cc:;;::clooddxxdolc:;,,';xKXXXXXXK
-XXXXXXNXXNNNNNNNNNNNNNNNNNNNNNXklcllc;;;;;:cc:;,,''''',,;:ccool:;,''',dKXXXXXXKK
-XXXXXXNXXXXXNNNNNNNNNNNNNXNNXXNKkl::::loollooddoollc:;,,;;;;cc;,'...'o0KKKKKKKKK
-XXXXXXXXXXXXNNXXNXNNXXNNXXNXXXKko:,,;codxdl:;,',,,,,,;::::;;,''.....'xXKKXXKKXKK
-XXXXXXXXXXXXXXXXXXXXXXXNXXNX0o,.....,;ldkkkxl:,,'';:cccc:;,'.......  ;0XKXKKXKKK
-XXXXXXXXXXXXXXXXXXXXXXXXXXKd,...    ..;ldxxxdddolloooooc;'........   .lKXKKKKKKK
-XXXXXXXXXXXXXXXXXXXXXXXXXk;....      ..;::clllllllolc::,.........     .:d0KKKKKK
-XXXXXXXXXXXXXXXXXXXXXXXXx,....        ..'''','',,;,,'..........         .'lkKKKK
-XXXXXXXXXXXXXXXXXXXXXXXx,...         .;:;,'...................             'dKKK
-XXXXXXXXXXXXXXXXXXXXXXk,......     .;ool::;'................                .l0K
-XXXXXXXXXXXXXXXXXXXXXO,.......     ,dxdlcc:;,''...........                  ..;x
-XXXXXXXXXXXXXXXXXXXXKc........    .lkxxollccc;,,'.........                  ...;</code></body></html>
+@@@@@@@@%###(&@@@@@@%/#*..#....        .....   .   .....,..,,     ...,,,,****,,
+@@@@@@@@%###(&@@@@@@%/#*..#.....       .. ..      .....    ...,,,,,,,,*,,******
+@@@@@@@@####(@@@@@@@&/#*..#,....                      ..,,,,,,,,,,,,,**,,,*****
+@@@@@@@@####(@@@@@@@@((*..#,...,./. ..            ....,,,,,,,,,,,*,,,,*.,,*****
+@@@@@@@@#####@@@@@@@@((*..%*...../,/**,,, ..  . ......,,,,*,,,*,,*,,,**,,,*****
+@@@@@@@@###(#@@@@@@@@#(,..(/...,%##(((//****/,...,,...,,,***,,*,,**,*****,*****
+@@@@@@@@###(#@@@@@@@@&(,...(*&%#(////*,,,,......, ,...,,,****,*,*********,*****
+@&&&&@%@###(#@@@@@@@@@(,..&&%%(///**,,,............  .,,,***,,****,,****,,,....
+@@@@@@&(###(%@@@@@@@@&/,,@@%#(((//**,,,,,............   ,****,,,,,........ ....
+@@@@@@#@###(%@@@@@@@@%/,@@@%(((##/,,,.................    .,...................
+@@@@@@%##(%@@@@@@@@%/@@@%(#,((*,,....................    ................ ...
+@@@@@@&%###(&@@@@@@@@#/@&%#((,/*,.,...................     .............. .. .
+@@@@@@@####(&@@@@@@@@#@&&(/,/,.,.... .......... ......     ............ .  .
+@@@@@@@####(&@@@@@@@@////*,.,,..................    ..      ...... .. ..
+@@@@@@@####(&@@@@%@@@%#/,...,#*......    ....,......        .....
+@@@@@@@####/&@@@@(&(@@#/.,,*,#,.......................      . .
+@@@@@@@####(&@@@@@@@@%%(/,,,&(,...............................
+@@@@@&@####(&@@@@@(@@%@@&*(%#*,............................. .
+@@@@@%@###((@@@@@@@@@&//#@#,................................
+@@@@@#@###((@@@@@@@@&(/#&%/,.......................... ....
+@@@@@(@###(#@@@@@@@@#/%##&(,,,...............................
+@@@@@//###(#@@@@@@@@#/&%#((*,,..............................
+@@@@/*%((#(%@@@@@@@@#/%&%%#(/,..   ..................... ..
+%#@@#/#/%#(%@@@@@@@@(//&%%((*.,,........................
+/@@@/###/,(*@@@@@@@@(/,&%##//,..........................
+&&@@@%%%#/(%(@@@@@@@(/,,*#/*...   ...................
+@(#&@&%%&((&@@@@@@@@(/,(#/##/,,...................... .
+((%&*/,#(&@@@@@@@&(/,.(((/(/,.......................
+&%%%##/*##(&@@@@@@@@(/,..#(##/,,........................
+&&&&&/*###(&@@@@@@@@(*,.,*%#/,,........... ...........
+%@#//(****/(@@#//((((#%(#*#(*,,.....  . ..............
+/(*,.,..(*%*#.*/#*//(/#(##,,/***.......................
+#(//**#,,(#..,//(((//##(#,,**&&%###(**,,,.............
+@@&(%*..#(. ,**/////##((#*//%&&(((//*,,,,........
+@@//,..#.  .**//((/#%((%(*/#%&&%#(/(/*/(/*,......
+%(,,..*.  .**//(/##%(#(##,*#%%###(((#%%#/,.....
+/,...,   .**/(#(##%((#(/(*,/((((((#%%%#(*.....   .
+,.....  ,*//(((((#/#/((///***/(((#%##((((/*,,,
+.,*....,///(((((((/#/(/**//*,*((#########(                                      </code></body></html>
